--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
   "name": "rasgen",
   "version": "0.1.0",
+  "description": "Rasgen",
   "private": true,
+  "author": "rastgame",
+  "homepage": "https://rasgen.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rastgame/rasgen"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start", 
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "clean": "rm -rf .next out",
+    "prepare": "husky install"
   },
   "dependencies": {
     "badge-maker": "^4.1.0",
@@ -19,8 +33,16 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/jest": "^29.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
